--- a/app/main.ipynb
+++ b/app/main.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
-   ]
+    "import numpy as np\n",
+    "import sqlite3\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -32,17 +35,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "# write your code here"
+    "current_dir = os.getcwd()\n",
+    "\n",
+    "db_path = os.path.join(current_dir, \"..\", \"db.sqlite3\")\n",
+    "\n",
+    "conn = sqlite3.connect(db_path)\n",
+    "\n",
+    "query = \"\"\"\n",
+    "SELECT *\n",
+    "FROM restaurant_product p\n",
+    "JOIN restaurant_orderitem oi ON p.id = oi.id\n",
+    "JOIN restaurant_order o ON oi.id = o.id\n",
+    "\"\"\"\n",
+    "\n",
+    "df = pd.read_sql_query(query, conn)\n",
+    "\n",
+    "df.to_csv(\"restaurant_data.csv\", index=False)\n",
+    "\n",
+    "print(f'Кількість рядків у датафреймі: {len(df)}')\n",
+    "\n",
+    "conn.close()\n",
+    "df"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -64,17 +87,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "# write your code here"
+    "top_products = df.groupby(\"name\")[\"quantity\"].sum().reset_index()\n",
+    "\n",
+    "top_10_products = top_products.sort_values(by='quantity', ascending=False).head(10)\n",
+    "\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.pie(top_10_products[\"quantity\"], labels=top_10_products[\"name\"], autopct=\"%1.1f%%\", startangle=90)\n",
+    "plt.title(\"Top 10 Most Popular Products by Quantity Sold\")\n",
+    "plt.axis(\"equal\")\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -92,10 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "# write your code here"
+    "df[\"item_price\"] = df[\"price\"] * df[\"quantity\"]\n",
+    "top_products_by_price = df.groupby(\"name\")[\"item_price\"].sum().reset_index()\n",
+    "\n",
+    "top_10_products_by_price = top_products_by_price.sort_values(by=\"item_price\", ascending=False).head(10)\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.pie(top_10_products_by_price[\"item_price\"], labels=top_10_products_by_price[\"name\"], autopct=\"%1.1f%%\", startangle=90)\n",
+    "plt.title(\"Top 10 Products by Revenue (Item Price)\")\n",
+    "plt.axis(\"equal\")\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -103,7 +140,9 @@
      "name": "#%%\n",
      "is_executing": true
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -124,17 +163,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "# write your code here"
+    "df[\"datetime\"] = pd.to_datetime(df[\"datetime\"])\n",
+    "df[\"order_hour\"] = df[\"datetime\"].dt.hour\n",
+    "income_by_hour = df.groupby(\"order_hour\")[\"item_price\"].sum().reset_index()\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(income_by_hour['order_hour'], income_by_hour['item_price'], color='skyblue')\n",
+    "\n",
+    "plt.title(\"Total Restaurant Income by Order Hour\", fontsize=14)\n",
+    "plt.xlabel(\"Hour of the Day\", fontsize=12)\n",
+    "plt.ylabel(\"Total Income ($)\", fontsize=12)\n",
+    "\n",
+    "plt.xticks(range(24))\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -151,17 +201,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "# write your code here"
+    "df[\"order_day_of_week\"] = df[\"datetime\"].dt.dayofweek\n",
+    "\n",
+    "income_by_day_of_week = df.groupby(\"order_day_of_week\")[\"item_price\"].sum().reset_index()\n",
+    "\n",
+    "day_names = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
+    "income_by_day_of_week[\"day_name\"] = income_by_day_of_week[\"order_day_of_week\"].apply(lambda x: day_names[x])\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(income_by_day_of_week[\"day_name\"], income_by_day_of_week[\"item_price\"], color=\"skyblue\")\n",
+    "\n",
+    "plt.title(\"Total Restaurant Income by Day of the Week\", fontsize=14)\n",
+    "plt.xlabel(\"Day of the Week\", fontsize=12)\n",
+    "plt.ylabel(\"Total Income ($)\", fontsize=12)\n",
+    "\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
